# auth-microservice

./: .gitignore  package-lock.json  pyproject.toml  requirements.txt  vercel.json
api/: managers.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_address_and_more.py  0002_invitation.py  0003_alter_invitation_code_alter_invitation_id.py  0003_alter_user_password.py  0004_invitation_created_by_alter_invitation_code_and_more.py
authservice/: settings.py  urls.py  wsgi.py  wsgi_handler.py
templates/: invitation.html  registration.html
