[tool.poetry]
name = "authservice"
version = "0.1.0"
description = ""
authors = ["RM02 <rafamark244@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.2"
asgiref = "3.7.2"
bcrypt = "4.0.1"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
cryptography = "41.0.1"
defusedxml = "0.7.1"
dj-rest-auth = "4.0.1"
django-allauth = "0.43.0"
django-cors-headers = "4.1.0"
django-environ = "0.10.0"
django-filter = "23.2"
django-rest-auth = "0.9.5"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
idna = "3.4"
oauthlib = "3.2.2"
psycopg2-binary = "2.9.6"
pycparser = "2.21"
pyjwt = "2.7.0"
python3-openid = "3.2.0"
pytz = "2023.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
six = "1.16.0"
sqlparse = "0.4.4"
typing-extensions = "4.6.3"
urllib3 = "2.0.3"
uuid = "1.30"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn==19.7.1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
